--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
+  "resolutions": {
+    "@rspack/core": "1.4.0-rc.0"
+  },
+  "overrides": {
+    "@rspack/core": "1.4.0-rc.0"
+  },
   "dependencies": {
     "@docusaurus/core": "^3.8.1",
     "@docusaurus/preset-classic": "^3.8.1",
@@ -27,6 +33,8 @@
     "@docusaurus/module-type-aliases": "^3.8.1",
     "@docusaurus/tsconfig": "^3.8.1",
     "@docusaurus/types": "^3.8.1",
+    "@types/prismjs": "^1",
+    "prismjs": "^1.30.0",
     "typescript": "^5.8.3"
   },
   "browserslist": {
