--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@docusaurus/core": "^3.8.1",
     "@docusaurus/preset-classic": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
+    "caniuse-lite": "^1.0.30001731",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
@@ -33,8 +34,6 @@
     "@docusaurus/module-type-aliases": "^3.8.1",
     "@docusaurus/tsconfig": "^3.8.1",
     "@docusaurus/types": "^3.8.1",
-    "@types/prismjs": "^1",
-    "prismjs": "^1.30.0",
     "typescript": "^5.8.3"
   },
   "browserslist": {
