--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,4 @@
 nodeLinker: node-modules
+#pnpMode: strict
 
-pnpMode: strict
-
-yarnPath: .yarn/releases/yarn-4.9.2.cjs
+#yarnPath: .yarn/releases/yarn-4.9.2.cjs
