--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mdx-js/react": "^3.0.0",
     "caniuse-lite": "^1.0.30001731",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.2",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
