--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -6,10 +6,6 @@ on:
       - master
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
-env:
-  # Setting an environment variable with the value of a configuration variable
-  API_KEY: ${{vars.ALGOLIA_API_KEY}}
-  APPLICATION_ID: ${{vars.ALGOLIA_APPLICATION_ID}}
 
 jobs:
   deploy:
@@ -27,7 +23,10 @@ jobs:
 
       - name: Build website
         run: yarn build
-
+        env:
+          # Pass in env vars for Docusaurus config if needed
+          API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+          APPLICATION_ID: ${{ secrets.ALGOLIA_APPLICATION_ID }}
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
       - name: Deploy to GitHub Pages
