--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@docusaurus/theme-mermaid": "^3.8.1",
     "@iconify-json/logos": "^1.2.9",
     "@mdx-js/react": "^3.0.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "caniuse-lite": "^1.0.30001731",
-    "clsx": "^2.0.0",
     "dotenv": "^17.2.2",
+    "lucide-react": "^0.544.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -41,8 +43,12 @@
     "@docusaurus/types": "^3.8.1",
     "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.3"
   },
   "browserslist": {
