--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,15 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@site/*": [
+        "./*"
+      ], // Docusaurus's path alias
+      "@/*": [
+        "./src/*"
+      ] // Shadcn UI's expected path alias
+    }
   },
   "exclude": [".docusaurus", "build"]
 }
