--- a/package.json
+++ b/package.json
@@ -14,12 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
-  "resolutions": {
-    "@rspack/core": "1.4.0-rc.0"
-  },
-  "overrides": {
-    "@rspack/core": "1.4.0-rc.0"
-  },
+  "overrides": {},
   "dependencies": {
     "@docusaurus/core": "^3.8.1",
     "@docusaurus/plugin-google-gtag": "^3.8.1",
@@ -30,12 +25,12 @@
     "@mdx-js/react": "^3.0.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "caniuse-lite": "^1.0.30001731",
     "dotenv": "^17.2.2",
     "lucide-react": "^0.544.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "redocusaurus": "^2.5.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.8.1",
@@ -46,7 +41,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "postcss": "^8.5.6",
-    "redocusaurus": "^2.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
@@ -66,5 +60,6 @@
   },
   "engines": {
     "node": ">=18.0"
-  }
+  },
+  "packageManager": "yarn@4.9.4"
 }
