--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -12,17 +12,20 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: yarn
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Enable Corepack
         run: corepack enable
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: yarn
+
       - name: Prepare Yarn 4
-        run: corepack prepare yarn@4.9.4 --activate
+        run: corepack prepare yarn@4.10.3 --activate
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
